Substitute SQLalchemy & Pydantic with SQLModel

--- a/config/app.cfg
+++ b/config/app.cfg
@@ -1,7 +1,7 @@
 [server]
-host = 0.0.0.0
+host = localhost
 port = 8000
-base_url = http://localhost:${port}
+scheme = http
 
 [db]
 db_name = shorturl.sqlite
