feat: jwt login

--- a/config/app.cfg
+++ b/config/app.cfg
@@ -13,4 +13,10 @@ env = dev
 [url_shortener]
 length = 8
 
+[jwt]
+algorithm = HS256
+access_token_expire_minutes = 30
+secret_key = secret   # openssl rand -hex 32
+
+
 [logging]
