build: update config for prod env

--- a/config/app.cfg
+++ b/config/app.cfg
@@ -1,7 +1,12 @@
-[server]
+[dev-server]
 host = localhost
 port = 8000
 scheme = http
+
+[prod-server]
+host = super-short.onrender.com
+port = 80
+scheme = https
 
 [db]
 db_name = shorturl.sqlite
